tests/programs/invalid/final_formals.java
public class final_formals {
  public int m(final int x) {
    return x;
  }
}